# NSE-Data-Mart

./: pyproject.toml
config/: config.yaml
src/stockify/: config.py
src/stockify/ingest/: fetcher.py  ingest_main.py  scrapper.py  writer.py
src/stockify/orchestration/: daily_ingest.py
src/stockify/utils/: logger.py  tickers.py
